# Dentist-report-bot

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/config/: settings.py
app/controller/: dentist_report_controller.py  prompts.py
app/service/: speech2report_service.py
