[tool.poetry]
name = "dentis-gpt"
version = "0.1.0"
description = ""
authors = ["taih-picon <taih@picontechnology.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
langchain = "^0.1.20"
psycopg2-binary = "^2.9.9"
langchain-core = "^0.1.52"
openai = "^1.29.0"
langchain-openai = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
